[project]
name = "bilibili-video-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=1.0.3",
    "requests>=2.32.5",
    "imageio-ffmpeg>=0.4.0",
    "beautifulsoup4>=4.12.2",
    "html5lib>=1.0.1",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
